--- a/css/storyInfo.css
+++ b/css/storyInfo.css
@@ -437,21 +437,9 @@ footer
     left: auto;
     transform: none;
     text-align: center;
-    font-size: 3rem;        
+    font-size: clamp(4rem, 6vw, 6rem);        
     margin: 3rem 0;  
     color: black !important;     
-  }
-
-  .mainTitleWhite 
-  {
-    position: relative;     
-    top: auto;
-    left: auto;
-    transform: none;
-    text-align: center;
-    font-size: 3rem;        
-    margin: 3rem 0;  
-    color: white !important;     
   }
 
   .secondTitle 
